--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ html {
   padding: 7rem;
   margin-left: -12.2rem;
   background-color: #fff;
+  position: relative;
 }
 
 .content__heading {
@@ -63,7 +64,7 @@ html {
   line-height: 1.5;
 }
 
-.content-details {
+.content__details {
   font-size: 2rem;
   display: -ms-grid;
   display: grid;
@@ -74,7 +75,7 @@ html {
   grid-gap: 0.5rem;
 }
 
-.content-details .author__photo {
+.content__details .author__photo {
   width: 80%;
   height: auto;
   border-radius: 50%;
@@ -86,7 +87,7 @@ html {
   grid-row: 1/3;
 }
 
-.content-details .author__name {
+.content__details .author__name {
   font-weight: 700;
   color: #48556a;
   -ms-flex-item-align: end;
@@ -94,10 +95,54 @@ html {
       align-self: end;
 }
 
-.content-details .date {
+.content__details .date {
   -ms-flex-item-align: start;
       -ms-grid-row-align: start;
       align-self: start;
+}
+
+.share__links {
+  border: 2px solid skyblue;
+  background-color: #48556a;
+  padding: auto 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 1rem;
+}
+
+.share__links > * {
+  margin: 2.5rem 1rem;
+}
+
+.share__links p {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #6d7f97;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  margin-left: 6rem;
+}
+
+.share__icon:last-of-type {
+  margin-right: 6rem;
+}
+
+.hide {
+  display: none;
 }
 
 .btn-share {
