--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -41,8 +41,8 @@ html {
   // border: 2px solid tomato;
   padding: 7rem;
   margin-left: -12.2rem;
-
   background-color: #fff;
+  position: relative;
 
   &__heading {
     color: $color-very-dark-grayish-blue;
@@ -55,33 +55,66 @@ html {
     font-size: 2.7rem;
     line-height: 1.5;
   }
+
+  &__details {
+    // border: 2px solid tomato;
+    font-size: 2rem;
+    display: grid;
+    grid-template-columns: 15% 1fr 15%;
+    grid-template-rows: repeat(2, 50%);
+    grid-gap: 0.5rem;
+
+    .author__photo {
+      width: 80%;
+      height: auto;
+      border-radius: 50%;
+      grid-column: 1/2;
+      grid-row: 1/3;
+    }
+
+    .author__name {
+      font-weight: 700;
+      color: $color-very-dark-grayish-blue;
+      align-self: end;
+    }
+
+    .date {
+      align-self: start;
+    }
+  }
 }
 
-.content-details {
-  // border: 2px solid tomato;
-  font-size: 2rem;
-  display: grid;
-  grid-template-columns: 15% 1fr 15%;
-  grid-template-rows: repeat(2, 50%);
-  grid-gap: 0.5rem;
+.share__links {
+  border: 2px solid skyblue;
+  background-color: $color-very-dark-grayish-blue;
+  padding: auto 5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  border-radius: 1rem;
 
-  .author__photo {
-    width: 80%;
-    height: auto;
-    border-radius: 50%;
-    grid-column: 1/2;
-    grid-row: 1/3;
+  & > * {
+    margin: 2.5rem 1rem;
   }
 
-  .author__name {
+  p {
+    font-size: 1.6rem;
     font-weight: 700;
-    color: $color-very-dark-grayish-blue;
-    align-self: end;
+    color: $color-destructured-dark-blue;
+    text-transform: uppercase;
+    letter-spacing: 1rem;
+    margin-left: 6rem;
   }
+}
 
-  .date {
-    align-self: start;
-  }
+.share__icon:last-of-type {
+  margin-right: 6rem;
+}
+
+.hide {
+  display: none;
 }
 
 // BUTTON
