--- a/css/main.css
+++ b/css/main.css
@@ -40,12 +40,16 @@ html {
   display: -ms-flexbox;
   display: flex;
   border-radius: 1.6rem;
-  overflow: hidden;
   -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
 }
 
+.content-img {
+  border-radius: 1.6rem 0 0 1.6rem;
+}
+
 .content {
+  border-radius: 0 1.6rem 1.6rem 0;
   padding: 7rem;
   margin-left: -12.2rem;
   background-color: #fff;
@@ -102,7 +106,6 @@ html {
 }
 
 .share__links {
-  border: 2px solid skyblue;
   background-color: #48556a;
   padding: auto 5rem;
   display: -webkit-box;
@@ -122,6 +125,25 @@ html {
   width: -moz-fit-content;
   width: fit-content;
   border-radius: 1rem;
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  position: absolute;
+  top: 33rem;
+  right: -6rem;
+}
+
+.share__links::after {
+  content: '';
+  height: 30px;
+  width: 30px;
+  background-color: #48556a;
+  -webkit-clip-path: polygon(0 0, 100% 0, 50% 70%);
+          clip-path: polygon(0 0, 100% 0, 50% 70%);
+  position: absolute;
+  right: 15rem;
+  top: 7rem;
 }
 
 .share__links > * {
@@ -142,7 +164,10 @@ html {
 }
 
 .hide {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .btn-share {
@@ -160,6 +185,15 @@ html {
   border-radius: 50%;
   width: 55%;
   height: 55%;
+}
+
+.btn-share:focus {
+  outline: none;
+}
+
+.btn-share:active {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
 }
 
 .attribution {
