--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,3 +9,5 @@ $font-default: 'Manrope', sans-serif;
 
 // BREAKPOINTS
 $bp-largest: 90em; // 1440px
+$bp-large: 75em; // 1200px
+$bp-smallest: 23.4375em; // 375px
