--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,15 @@ html {
   font-size: 62.5%;
 }
 
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 .container {
   min-height: 100vh;
-  max-width: 144rem;
+  max-width: 130rem;
   margin: 0 auto;
   font-family: "Manrope", sans-serif;
   font-size: 1.3rem;
@@ -42,6 +48,16 @@ html {
   border-radius: 1.6rem;
   -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
+  height: 50vh;
+}
+
+@media only screen and (max-width: 23.4375em) {
+  .content-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .content-img {
@@ -50,7 +66,7 @@ html {
 
 .content {
   border-radius: 0 1.6rem 1.6rem 0;
-  padding: 7rem;
+  padding: 5rem 6rem;
   margin-left: -12.2rem;
   background-color: #fff;
   position: relative;
@@ -58,13 +74,13 @@ html {
 
 .content__heading {
   color: #48556a;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   font-weight: 700;
 }
 
 .content__text {
   margin: 2rem auto;
-  font-size: 2.7rem;
+  font-size: 2.2rem;
   line-height: 1.5;
 }
 
@@ -72,15 +88,16 @@ html {
   font-size: 2rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 15% 1fr 15%;
-      grid-template-columns: 15% 1fr 15%;
+  -ms-grid-columns: 10% 1fr 10%;
+      grid-template-columns: 10% 1fr 10%;
   -ms-grid-rows: (50%)[2];
       grid-template-rows: repeat(2, 50%);
-  grid-gap: 0.5rem;
+  grid-column-gap: 2.5rem;
+  grid-row-gap: 0.5rem;
 }
 
 .content__details .author__photo {
-  width: 80%;
+  width: 100%;
   height: auto;
   border-radius: 50%;
   -ms-grid-column: 1;
@@ -130,8 +147,8 @@ html {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   position: absolute;
-  top: 33rem;
-  right: -6rem;
+  top: 23rem;
+  right: -6.2rem;
 }
 
 .share__links::after {
@@ -180,11 +197,10 @@ html {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin-left: auto;
   border: none;
   border-radius: 50%;
-  width: 55%;
-  height: 55%;
+  width: 70%;
+  height: 70%;
 }
 
 .btn-share:focus {
