--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -8,11 +8,15 @@
 
 html {
   font-size: 62.5%; // 1rem = 10px
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 
 .container {
   min-height: 100vh;
-  max-width: 144rem; // bp-largest
+  max-width: 130rem; // bp-largest
   margin: 0 auto;
   font-family: $font-default;
   font-size: 1.3rem;
@@ -32,29 +36,36 @@ html {
   border-radius: 1.6rem;
   // overflow: hidden;
   box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.2);
+  height: 50vh;
+
+  @media only screen and (max-width: $bp-smallest) {
+    flex-direction: column;
+  }
 }
 
 .content-img {
   border-radius: 1.6rem 0 0 1.6rem;
+  // width: 100%;
+  // height: auto;
 }
 
 .content {
   // border: 2px solid tomato;
   border-radius: 0 1.6rem 1.6rem 0;
-  padding: 7rem;
+  padding: 5rem 6rem;
   margin-left: -12.2rem;
   background-color: #fff;
   position: relative;
 
   &__heading {
     color: $color-very-dark-grayish-blue;
-    font-size: 4.5rem;
+    font-size: 3.5rem;
     font-weight: 700;
   }
 
   &__text {
     margin: 2rem auto;
-    font-size: 2.7rem;
+    font-size: 2.2rem;
     line-height: 1.5;
   }
 
@@ -62,12 +73,13 @@ html {
     // border: 2px solid tomato;
     font-size: 2rem;
     display: grid;
-    grid-template-columns: 15% 1fr 15%;
+    grid-template-columns: 10% 1fr 10%;
     grid-template-rows: repeat(2, 50%);
-    grid-gap: 0.5rem;
+    grid-column-gap: 2.5rem;
+    grid-row-gap: 0.5rem;
 
     .author__photo {
-      width: 80%;
+      width: 100%;
       height: auto;
       border-radius: 50%;
       grid-column: 1/2;
@@ -102,8 +114,8 @@ html {
   transition: all 0.2s;
 
   position: absolute;
-  top: 33rem;
-  right: -6rem;
+  top: 23rem;
+  right: -6.2rem;
 
   &::after {
     // border: 2px solid skyblue;
@@ -148,12 +160,11 @@ html {
   grid-column: 3/4;
   grid-row: 1/3;
   align-self: center;
-  margin-left: auto;
 
   border: none;
   border-radius: 50%;
-  width: 55%;
-  height: 55%;
+  width: 70%;
+  height: 70%;
 
   &:focus {
     outline: none;
