--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,4 +11,4 @@ $font-default: 'Manrope', sans-serif;
 $bp-largest: 90em; // 1440px
 $bp-large: 75em; // 1200px
 $bp-medium: 62.5em; // 1000px
-$bp-smallest: 23.4375em; // 375px
+$bp-small: 23.4375em; // 375px
