--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -12,6 +12,10 @@ html {
   @media only screen and (max-width: $bp-large) {
     font-size: 50%;
   }
+
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 40%;
+  }
 }
 
 .container {
@@ -28,6 +32,10 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  // @media only screen and (max-width: $bp-medium) {
+  //   width: 100%;
+  // }
 }
 
 .content-container {
@@ -39,8 +47,9 @@ html {
   // height: 50vh;
   width: 100%;
 
-  @media only screen and (max-width: $bp-smallest) {
+  @media only screen and (max-width: $bp-medium) {
     flex-direction: column;
+    max-width: 60rem;
   }
 }
 
@@ -49,6 +58,11 @@ html {
   border-radius: 1.6rem 0 0 1.6rem;
   width: 50%;
   height: auto;
+
+  @media only screen and (max-width: $bp-medium) {
+    border-radius: 1.6rem 1.6rem 0 0;
+    width: 100%;
+  }
 }
 
 .content {
@@ -59,10 +73,22 @@ html {
   background-color: #fff;
   position: relative;
 
+  @media only screen and (max-width: $bp-medium) {
+    border-radius: 0 0 1.6rem 1.6rem;
+    width: 100%;
+    margin-left: auto;
+    margin-top: -10rem;
+    padding-bottom: 4rem;
+  }
+
   &__heading {
     color: $color-very-dark-grayish-blue;
     font-size: 3.5rem;
     font-weight: 700;
+
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 3rem;
+    }
   }
 
   &__text {
@@ -80,6 +106,11 @@ html {
     grid-template-rows: repeat(2, 50%);
     grid-column-gap: 2.5rem;
     grid-row-gap: 0.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      margin-top: 5rem;
+      grid-template-columns: 15% 1fr 15%;
+    }
 
     .author__photo {
       width: 100%;
@@ -120,6 +151,22 @@ html {
   top: 27.5rem;
   right: -6.1rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    position: absolute;
+    top: 36.1rem;
+    // bottom: 0;
+    right: 0;
+    z-index: 1;
+    width: 100%;
+    height: 14rem;
+    border-radius: 0 0 1.6rem 1.6rem;
+    justify-content: flex-start;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    top: 39.8rem;
+  }
+
   &::after {
     // border: 2px solid skyblue;
     content: '';
@@ -131,10 +178,18 @@ html {
     position: absolute;
     right: 15rem;
     top: 7rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      display: none;
+    }
   }
 
   & > * {
     margin: 2.5rem 1rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      margin: auto 1.5rem;
+    }
   }
 
   p {
@@ -144,6 +199,10 @@ html {
     text-transform: uppercase;
     letter-spacing: 1rem;
     margin-left: 6rem;
+
+    @media only screen and (max-width: $bp-medium) {
+      font-size: 2.5rem;
+    }
   }
 }
 
@@ -168,6 +227,12 @@ html {
   border-radius: 50%;
   width: 70%;
   height: 70%;
+
+  @media only screen and (max-width: $bp-medium) {
+    z-index: 2;
+    width: 80%;
+    height: 80%;
+  }
 
   &:focus {
     outline: none;
